--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ project.fragment.lock.json
 artifacts/
 appsettings.json
 appsettings.*.json
+Properties/launchSettings.json
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
